--- a/web/package.json
+++ b/web/package.json
@@ -16,11 +16,13 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
     "isomorphic-fetch": "^3.0.0",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "13.4.11",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-lightbox": "^5.1.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "video-react": "^0.16.0"
