--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
@@ -23,11 +24,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3",
+    "react-image-lightbox": "^5.1.4",
     "typescript": "5.1.6",
-    "video-react": "^0.16.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14"
+    "video-react": "^0.16.0",
+    "yet-another-react-lightbox": "^3.12.0"
   }
 }
