--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_CLOUDSTATION_ENDPOINT=
-NEXT_PUBLIC_CLOUDSTATION_ENDPOINT_PORT=
+NEXT_PUBLIC_CLOUDSTATION_ENDPOINT=http://192.168.1.47
+NEXT_PUBLIC_CLOUDSTATION_ENDPOINT_PORT=8888
