--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "formik": "^2.4.3",
     "framer-motion": "^10.15.0",
     "next": "13.4.12",
     "react": "18.2.0",
